<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"

    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/carbon_fibre_texture"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="anastasoft.rallyvision.activity.MenuPrincipal">

    <Button
        android:id="@+id/zera"

        style="@style/letra_botão.azul"
        android:layout_alignBaseline="@+id/editar"
        android:layout_alignBottom="@+id/editar"
        android:layout_alignLeft="@+id/RelativeLayout2"
        android:text="@string/zera" />


    <LinearLayout
        android:id = "@+id/ConnecLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <include
            android:id="@+id/score_name_entry"
            layout="@layout/connect_button_red" />

    </LinearLayout>


    <Button
        android:id="@+id/editar"
        style="@style/letra_botão.amarelo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/editar" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/painel"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="3dp">

        <anastasoft.rallyvision.activity.customfontdemo.FontTextView
            android:id="@+id/ODdig05"
            style="@style/velocimetro_preto" />

        <anastasoft.rallyvision.activity.customfontdemo.FontTextView
            android:id="@+id/ODdig04"
            style="@style/velocimetro_preto" />

        <anastasoft.rallyvision.activity.customfontdemo.FontTextView
            android:id="@+id/ODdig03"

            style="@style/velocimetro_vermelho" />

        <anastasoft.rallyvision.activity.customfontdemo.FontTextView
            android:id="@+id/ODdig02"

            style="@style/velocimetro_vermelho" />

        <anastasoft.rallyvision.activity.customfontdemo.FontTextView
            android:id="@+id/ODdig01"

            style="@style/velocimetro_vermelho" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/vel"
            style="@style/letra_1"
            android:layout_alignBaseline="@+id/vel_media"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/vel" />

        <TextView
            android:id="@+id/vel_media"
            style="@style/letra_1"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/vel_media" />

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/vel_media"
            android:layout_below="@+id/vel_media"
            style="@style/painel"

            android:orientation="horizontal">

            <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                android:id="@+id/AVRGVelDig03"
                style="@style/velocimetro_pequeno" />

            <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                android:id="@+id/AVRGVelDig02"
                style="@style/velocimetro_pequeno" />

            <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                android:id="@+id/AVRGVelDig01"
                style="@style/velocimetro_pequeno" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/LinearLayout02"
            style="@style/painel"

            android:orientation="horizontal">

            <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                android:id="@+id/InstVelDig03"
                style="@style/velocimetro_pequeno" />

            <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                android:id="@+id/InstVelDig02"
                style="@style/velocimetro_pequeno" />

            <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                android:id="@+id/InstVelDig01"
                style="@style/velocimetro_pequeno" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/slidersLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/zera"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/RelativeLayout2"
        android:layout_alignRight="@+id/RelativeLayout2"
        android:layout_alignEnd="@+id/RelativeLayout2"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:weightSum="1"
            android:baselineAligned="false"
            android:layout_below="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout">

            <LinearLayout
                android:id="@+id/MotoristaIdealLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/LinearLayout02"
                style="@style/painel"

                android:orientation="horizontal">

                <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                    android:id="@+id/tipoTrechoMotoristaIdeal"
                    style="@style/trecho"
                    android:layout_height="match_parent"/>


            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/progressBarMotoristaIdeal"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:weightSum="1"
            android:baselineAligned="false"
            android:layout_below="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout">

            <LinearLayout
                android:id="@+id/MotoristaUsuariolLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/LinearLayout02"
                style="@style/painel"

                android:orientation="horizontal">

                <anastasoft.rallyvision.activity.customfontdemo.FontTextView
                    android:id="@+id/tipoTrechoMotoristaUsuario"
                    style="@style/trecho"
                    android:layout_height="match_parent"/>


            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/progressBarMotoristaUsuário"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>